--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Engine Test</title>
     <script src="./util/gl-matrix.js"></script>
-    <script type="module" src="./test/main.js" defer></script>
+    <script type="module" src="./main.js" defer></script>
     <!-- <script type="module" src="./main.js" defer></script> -->
 </head>
 <body>
