log: add manual pos inputs
I implemented a way to move the currently selected object by manually
typing values into the x,y,z position inputs.

--- a/rework/index.html
+++ b/rework/index.html
@@ -13,17 +13,50 @@
         <p id="name">Item Name</p>
         <p>Transform Section</p>
         <p>Position</p>
-        <p>x = <span id="pos_x">0</span></p>
-        <p>y = <span id="pos_y">0</span></p>
-        <p>z = <span id="pos_z">0</span></p>
+        <div class="info_div" id="position">
+            <div class="num_div">
+                <p>x:</p>
+                <input class="x" type="number">
+            </div>
+            <div class="num_div">
+                <p>y:</p>
+                <input class="y" type="number">
+            </div>
+            <div class="num_div">
+                <p>z:</p>
+                <input class="z" type="number">
+            </div>
+        </div>
         <p>Rotation</p>
-        <p>x = <span id="rot_x">0</span></p>
-        <p>y = <span id="rot_y">0</span></p>
-        <p>z = <span id="rot_z">0</span></p>
+        <div class="info_div" id="rotation">
+            <div class="num_div">
+                <p>x:</p>
+                <input class="x" type="number">
+            </div>
+            <div class="num_div">
+                <p>y:</p>
+                <input class="y" type="number">
+            </div>
+            <div class="num_div">
+                <p>z:</p>
+                <input class="z" type="number">
+            </div>
+        </div>
         <p>Scale</p>
-        <p>x = <span id="scl_x">0</span></p>
-        <p>y = <span id="scl_y">0</span></p>
-        <p>z = <span id="scl_z">0</span></p>
+        <div class="info_div" id="scale">
+            <div class="num_div">
+                <p>x:</p>
+                <input class="x" type="number">
+            </div>
+            <div class="num_div">
+                <p>y:</p>
+                <input class="y" type="number">
+            </div>
+            <div class="num_div">
+                <p>z:</p>
+                <input class="z" type="number">
+            </div>
+        </div>
     </div>
     <canvas id="canvas"></canvas>
 </body>
