log: begin mesh/model import feature
I added an file input to allow me to add new meshes/models to the scene.
I had to learn a bit about type="file" for inputs and about the File and
FileReader object.

Next I need to create a new Object that has the newly imported mesh.
That includes the VAO, AABB, etc.

--- a/rework/index.html
+++ b/rework/index.html
@@ -9,6 +9,12 @@
     <script type="module" src="./main.js" defer></script>
 </head>
 <body>
+    <div id="scene_info">
+        <input id="file_input" type="file" accept=".ply">
+        <p>Scene Info</p>
+        <ul id="scene_objects_list"></ul>
+    </div>
+    <canvas id="canvas"></canvas>
     <div id="object_info">
         <p id="name">Item Name</p>
         <p>Transform Section</p>
@@ -58,6 +64,5 @@
             </div>
         </div>
     </div>
-    <canvas id="canvas"></canvas>
 </body>
 </html>
