log: add transform mode selection
I can now toggle between the different object transform
tools: translation, rotation, scaling.

The implementation is very bad, still waiting on that
major refactor.

--- a/rework/index.html
+++ b/rework/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="scene_info">
+        <p>Current Mode: <span id="cur_mode"></span></p>
         <p>Gizmo Information</p>
         <p id="gizmo_pos"></p>
         <input id="file_input" type="file" accept=".ply">
