log: get 2 windows to work
I've spent most of yesterday and today just trying to understand how
to get multiple views to work. The new main working directory is rework2
and I need to begin transfering code over from rework's main.js file.

--- a/rework2/test.html
+++ b/rework2/test.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game Engine Rework 2</title>
     <link rel="stylesheet" href="./test.css">
     <script src="../util/gl-matrix.js"></script>
     <script type="module" src="./test.js" defer></script>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<canvas id="canvas" class="canvas"></canvas>
 <div class="__body">
-    <div id="view_1"></div>
-    <div id="view_2"></div>
+    <div id="view1" class="view1"></div>
+    <div id="view2" class="view2"></div>
 </div>
 </body>
 </html>
