log: add AABB toggle button

--- a/rework2/test.html
+++ b/rework2/test.html
@@ -11,8 +11,11 @@
 <body>
 <canvas id="canvas" class="canvas"></canvas>
 <div class="__body">
-    <div id="view1" class="view1"></div>
-    <div id="view2" class="view2"></div>
+    <div class="views"> 
+        <div id="view1" class="view1"></div>
+        <div id="view2" class="view2"></div>
+    </div>
+    <button type="button" id="toggle_AABB">Toggle AABB</button>
 </div>
 </body>
 </html>
