log: add game loop
I'm back finally, hopefully for good. I got somewhat burnt out and found
myself staring at the screen trying to figure out what to do for
extended periods of time so I took a break. I'm hoping to actually code
more now.

This commit adds a game loop toggle button that swaps from the
editorLoop to the gameLoop functions which actually has game ish
features like the "character controller"

--- a/rework2/test.html
+++ b/rework2/test.html
@@ -15,7 +15,8 @@
         <div id="view1" class="view1"></div>
         <div id="view2" class="view2"></div>
     </div>
-    <button type="button" id="toggle_AABB">Toggle AABB</button>
+    <button type="button" id="toggle_AABB" class="toggle">Toggle AABB</button>
+    <button type="button" id="toggle_GameLoop" class="toggle">Toggle Game Loop</button>
 </div>
 </body>
 </html>
