log: improve character controller
The player object can now be moved laterally. Originally the
last_static_transform property of a SceneObject was updated after all
movement inputs had been processed resulting in the last update (the
later if statements) to be the final influence on the object's movement
per frame.

The solution was to update the last_static_position in each if statement
so that subsequent if statements will add movement to the NEW value.

--- a/rework2/test.html
+++ b/rework2/test.html
@@ -17,6 +17,13 @@
     </div>
     <button type="button" id="toggle_AABB" class="toggle">Toggle AABB</button>
     <button type="button" id="toggle_GameLoop" class="toggle">Toggle Game Loop</button>
+    
+    <div>
+        <button type="button" id="w_pressed" class="toggle">W</button>
+        <button type="button" id="a_pressed" class="toggle">A</button>
+        <button type="button" id="s_pressed" class="toggle">S</button>
+        <button type="button" id="d_pressed" class="toggle">D</button>
+    </div>
 </div>
 </body>
 </html>
