--- a/rework2/test.html
+++ b/rework2/test.html
@@ -14,12 +14,7 @@
 <div class="page">
     <div class="scene-objects_section section">
         <p class="section_title">Scene Objects</p>
-        <ul class="scene-objects_list">
-            <li>unit_cube</li>
-            <li>weird_cube</li>
-            <li>apple</li>
-            <li>floor</li>
-            <li>wall</li>
+        <ul class="scene-objects_list" id="sceneobjects_list">
         </ul>
     </div>
     <div class="views_section">
@@ -67,8 +62,43 @@
     </div>
     <div class="models_section section">
         <p class="section_title">Models</p>
+        <input id="file_input" type="file" accept=".ply">
+        <div class="model_grid">
+
+        </div>
     </div>
 </div>
 </div>
 </body>
 </html>
+
+
+<!-- <div class="object_row--row--HIYa5 object_row--bold--Gmaim" data-testid="layer-row" draggable="false" style="transform: translate3d(0px, 224px, 0px); height: 32px; --row-actions-width: 48px; --object-row-height: 32px; --selection-height: 24px;">
+    <div class="object_row--rowActions--mHZm6" style="position: absolute; width: 100%; pointer-events: none;">
+        <div class="cx_wFull--sGUhp"></div>
+        <div class="object_row--rowActionsSticky--7r9op">
+            <div class="object_row--rowActionsContainer--SHc4g"></div>
+        </div>
+    </div>
+    <div class="object_row--rowContent--4pBDI" data-testid="2004:108-layers-panel-row" data-tooltip-hide-immediately="true" data-tooltip-max-lines="4" data-tooltip-show-immediately="true" data-tooltip-show-right="true" data-tooltip-text-left="true" data-tooltip-type="text" style="width: 289px;">
+        <span class="object_row--indents--Ygab2">
+            <span class="object_row--indent--uZlad"></span>
+            <span class="object_row--indent--uZlad"></span>
+            <span class="object_row--indent--uZlad"></span>
+            <span class="object_row--indent--uZlad"></span>
+            <span class="object_row--indent--uZlad"></span>
+        </span>
+        <span class="object_row--layerIcon--dTOdu object_row--iconWrapper--ivRSW object_row--stickyIconWrapper--UycmN" data-tooltip="Text" data-tooltip-show-above="true" data-tooltip-type="text" aria-label="Text" role="img">
+            <span style="stroke: none; fill: none;">
+                <svg width="16" height="16" fill="none" viewBox="0 0 16 16" data-fpl-icon-size="16">
+                    <path fill="var(--fpl-icon-color, var(--color-icon))" fill-rule="evenodd" d="M3 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V4H8v7h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H7V4H4v.5a.5.5 0 0 1-1 0z" clip-rule="evenodd"></path>
+                </svg>
+            </span>
+        </span>
+        <span class="object_row--rowText--3qo7Q ellipsis--ellipsis--Tjyfa" dir="auto">
+            <div class="object_row--rowNamePlaceholder--iRDp3">apple</div>
+            <div class="object_row--rowName--1Wxhe sf_pro--uiFontWithSFProFallback--m-p9V">apple</div>
+        </span>
+        <div class="object_row--rowActions--mHZm6"></div>
+    </div>
+</div> -->
