log: update transform values in object inspector
Selecting items, either through the Scene Objects list or the object
in the view, now displays that object's transform values in the Object
Inspector

--- a/rework2/test.html
+++ b/rework2/test.html
@@ -26,23 +26,23 @@
         <div class="transform_section">
             <p class="section_title">Transform</p>
             <div class="transform_subsection">
-                <div class="position">
+                <div id="position">
                     <p>Position</p>
-                    <input type="number" name="" id="x">
-                    <input type="number" name="" id="y">
-                    <input type="number" name="" id="z">
+                    <input type="number" name="" class="x">
+                    <input type="number" name="" class="y">
+                    <input type="number" name="" class="z">
                 </div>
-                <div class="rotation">
+                <div id="rotation">
                     <p>Rotation</p>
-                    <input type="number" name="" id="x">
-                    <input type="number" name="" id="y">
-                    <input type="number" name="" id="z">
+                    <input type="number" name="" class="x">
+                    <input type="number" name="" class="y">
+                    <input type="number" name="" class="z">
                 </div>
-                <div class="scale">
+                <div id="scale">
                     <p>Scale</p>
-                    <input type="number" name="" id="x">
-                    <input type="number" name="" id="y">
-                    <input type="number" name="" id="z">
+                    <input type="number" name="" class="x">
+                    <input type="number" name="" class="y">
+                    <input type="number" name="" class="z">
                 </div>
             </div>
         </div>
