--- a/rework2/test.html
+++ b/rework2/test.html
@@ -64,7 +64,14 @@
         <p class="section_title">Models</p>
         <input id="file_input" type="file" accept=".ply">
         <div class="model_grid">
-
+            <img src="../image.png" alt="" class="model_preview">
+            <img src="../image.png" alt="" class="model_preview">
+            <img src="../image.png" alt="" class="model_preview">
+            <img src="../image.png" alt="" class="model_preview">
+            <img src="../image.png" alt="" class="model_preview">
+            <img src="../image.png" alt="" class="model_preview">
+            <img src="../image.png" alt="" class="model_preview">
+            <img src="../image.png" alt="" class="model_preview">
         </div>
     </div>
 </div>
