log: store meshes and create new objects
You can now store meshes (until the next refresh) and add an object with
that mesh by clicking on the card in the Models UI section.

--- a/rework2/test.html
+++ b/rework2/test.html
@@ -63,15 +63,7 @@
     <div class="models_section section">
         <p class="section_title">Models</p>
         <input id="file_input" type="file" accept=".ply">
-        <div class="model_grid">
-            <img src="../image.png" alt="" class="model_preview">
-            <img src="../image.png" alt="" class="model_preview">
-            <img src="../image.png" alt="" class="model_preview">
-            <img src="../image.png" alt="" class="model_preview">
-            <img src="../image.png" alt="" class="model_preview">
-            <img src="../image.png" alt="" class="model_preview">
-            <img src="../image.png" alt="" class="model_preview">
-            <img src="../image.png" alt="" class="model_preview">
+        <div id="model_grid" class="model_grid">
         </div>
     </div>
 </div>
