--- a/rework3/test.html
+++ b/rework3/test.html
@@ -68,7 +68,7 @@
                     <li data-name="name" class="scene_list_li">Item</li>
                 </ul>
             </div>
-            <div class="inspector">
+            <div id="object_inspector" class="inspector">
                 <p class="section_title">Object Inspector</p>
                 <div class="object_props_container">
                     <div class="object_prop">
@@ -88,7 +88,7 @@
                         <p class="prop_name">Rotation</p>
                         <div class="prop_value_3_set">
                             <input id="obj_rotation_x" type="number" step="0.01" placeholder="0" class="prop_value_number">
-                            <input id="obj_rotation_y" type="number" step="0.01" placeholder="0" class="prop_value_number"> <!-- &deg -->
+                            <input id="obj_rotation_y" type="number" step="0.01" placeholder="0" class="prop_value_number">
                             <input id="obj_rotation_z" type="number" step="0.01" placeholder="0" class="prop_value_number">
                         </div>
                     </div>
