log: create UI for textures tab
This implementation is quite rough as I just want to get it over with. I
hope that in the future I can improve my entire approach to UI. Just
like everything else, I've realized how nice the approach that three.js
takes is. They have a semi extensive ui.js file that nicely handles a
variety of UI creation / interaction. Unfortunately I do feel that this
project is becoming very derivative of three.js since I was heavily
inspired by their implementation of their editor, though I did spend 3
months developing purely on my own.

Another concern is that the approach they take for making UI is one that has been
solved by modern frameworks that I'm not aware of due to how adamant I
am about avoiding frameworks like React or Next or whatever.

The next and likely final goal for the editor is to implement adding textures (images)
and applying them to objects that have UV coordinates. Oh and also
improving the way I handle raycasting / bounding boxes. After that I
hope to finally begin on making somethng that resembles a game / game
engine.

--- a/rework3/test.html
+++ b/rework3/test.html
@@ -17,15 +17,21 @@
         <button id="open_json" type="button" class="button_menubar">OPEN</button>
         <button id="save_json" type="button" class="button_menubar">SAVE</button>
         <button id="add_model" type="button" class="button_menubar">ADD MODEL</button>
+        <button id="add_texture" type="button" class="button_menubar">ADD TEXTURE</button>
         <input id="open_json_input" type="file" accept=".json" style="display: none;">
         <input id="add_model_input" type="file" accept=".ply" style="display: none">
+        <input id="add_texture_input" type="file" accept="image/png, image/jpeg" style="display: none">
     </div>
     <div class="content">
         <div class="render_context__models">
             <div id="view1" class="render_context"></div>
-            <div id="models" class="models">
-                <p class="section_title">Models</p>
-                <div id="models_grid" class="models_grid"></div>
+            <div id="assets" class="assets">
+                <div id="asset_tabs" class="asset_tabs">
+                    <p id="models_tab" class="section_title cursor_pointer selected_tab">Models</p>
+                    <p id="textures_tab" class="section_title cursor_pointer">Textures</p>
+                </div>
+                <div id="models_grid" class="asset_grid"></div>
+                <div id="textures_grid" class="asset_grid" style="display: none;"></div>
             </div>
         </div>
         <div class="sidebar">
