log: update UI to display texture
I added another checkbox to enable / disable the use of the assigned
texture. When a texture is deleted, objects with that texture will have
it removed.

--- a/rework3/test.html
+++ b/rework3/test.html
@@ -72,12 +72,14 @@
                         </div>
                     </div>
                     <div class="object_prop">
-                        <p class="prop_name">Color</p>
-                        <input id="obj_color" type="color" class="prop_value">
+                        <p class="prop_name">Use Texture</p>
+                        <input id="obj_use-texture" type="checkbox" class="prop_value">
+                        <p id="obj_texture" class="prop_value"></p>
                     </div>
                     <div class="object_prop">
                         <p class="prop_name">Use Color</p>
                         <input id="obj_use-color" type="checkbox" class="prop_value">
+                        <input id="obj_color" type="color" class="prop_value">
                     </div>
                    <div class="object_prop">
                         <p class="prop_name">Visible</p>
